Cambios de disenio y add eliminar producto y marcas

--- a/App4.2/App4.2.Android/App4.2.Android.csproj
+++ b/App4.2/App4.2.Android/App4.2.Android.csproj
@@ -118,5 +118,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\maquillaje.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\paulina_maquillaje.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\maquilaje1.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
